# nimbus

./: .gitignore  README.MD  pyproject.toml
notebooks/: web_scrapping.ipynb  web_scrapping_inmet.ipynb
notebooks/data/etl/: etl_aneel.ipynb  etl_inmet.ipynb  inmet.ipynb
notebooks/model/: data_model.ipynb  nimbus.ipynb
notebooks/web_scrapping/: inmet.ipynb  ws_inmet.ipynb  ws_inmet_hora.ipynb
src/data/: bq.py  etl.py  extracao.py  preprocessamento.py
src/web_scrapping/: browser.py  download.py  navegator.py
