[tool.poetry]
name = "project_name"
version = "0.1.0"
description = "Uma breve descrição do seu projeto"
authors = ["Seu Nome <seu.email@example.com>"]

# Diretório onde os pacotes estão localizados
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"
# Outras dependências do projeto

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools]
# Esta seção é removida para evitar duplicação
