[tool.poetry]
name = "nimbus"
version = "1.0.0"
description = "Enterprise Challenge 2024: Nimbus"
authors = ["Breno Ferrari <seu.email@example.com>"]

# Diretório dos pacotes
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"
# Outras dependências do projeto

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools]
